2012-09-24  Zan Dobersek  <zandobersek@gmail.com>

        Unexpected reftest passes are only reported when pixel testing is enabled in results.html as well
        https://bugs.webkit.org/show_bug.cgi?id=97426

        Reviewed by Ojan Vafai.

        The 'is_reftest' member of the TestResult class has been replaced by the reftest_type
        member which is a set containing either '!=', '==', both or none if the test represented
        by the object is not a reftest.

        When summarizing results, the test dictionary is updated to contain the 'reftest_type' key
        if the test is a reftest. The value of this key is a list of all the reftest types of this test.

        The test failure interpretation method has been refactored, it now reports only
        missing results of various formats and image diff percent in case of image or
        reftest mismatch.

        Unit tests have been modified accordingly.

        * Scripts/webkitpy/layout_tests/controllers/layout_test_runner.py:
        (LayoutTestRunner._update_summary_with_result):
        * Scripts/webkitpy/layout_tests/controllers/layout_test_runner_unittest.py:
        (LayoutTestRunnerTests.test_update_summary_with_result):
        * Scripts/webkitpy/layout_tests/controllers/manager.py:
        (interpret_test_failures):
        (summarize_results):
        * Scripts/webkitpy/layout_tests/controllers/manager_unittest.py:
        (ResultSummaryTest.test_interpret_test_failures):
        * Scripts/webkitpy/layout_tests/controllers/single_test_runner.py:
        (SingleTestRunner.run):
        (SingleTestRunner._run_reftest):
        * Scripts/webkitpy/layout_tests/models/test_results.py:
        (TestResult.__init__):
        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:
        (EndToEndTest.test_reftest_with_two_notrefs):

2012-09-24  Sam Weinig  <sam@webkit.org>
